--- a/src/styles/components/header.module.scss
+++ b/src/styles/components/header.module.scss
@@ -15,8 +15,9 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  * {
-    margin: 0 0 0 8vw;
+  span {
+    margin-left: 8vw;
+    padding: 1.5rem;
   }
   h1 {
     font-size: 2rem;
