--- a/src/styles/components/footer.module.scss
+++ b/src/styles/components/footer.module.scss
@@ -2,6 +2,6 @@
   position: absolute;
   bottom: 0;
   padding: 1.5rem;
-  border-top: 1px solid #f1f3f5;
+  background-color: #f1f3f5;
   width: 100%;
 }
