setup blog data query & homepage blog list

--- a/src/styles/components/footer.module.scss
+++ b/src/styles/components/footer.module.scss
@@ -1,7 +1,7 @@
 .footer {
-  position: absolute;
+  position: -webkit-sticky;
+  position: sticky;
   bottom: 0;
   padding: 1.5rem;
   background-color: #f1f3f5;
-  width: 100%;
 }
