--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,12 +1,8 @@
 body {
-  font-family: "Avenir", "Helvetica Neue", Helvetica, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, sans-serif;
   margin: 0;
   padding: 0;
   overflow-x: hidden;
-}
-
-h1, div, p, section, span,a {
-  margin: 0;
 }
 
 a {
