mobile landing styles

--- a/src/styles/components/header.module.scss
+++ b/src/styles/components/header.module.scss
@@ -2,14 +2,11 @@
   h1 {
     margin-bottom: 0; 
   }
-  a {
-    padding: 1.5rem;
-  }
 }
 
 .nav {
-  min-height: 25vh;
-  border-bottom: 1px solid #f1f3f5;
+  padding: 1.5rem;
+  border-bottom: 1px solid #000;
   display: flex;
   justify-content: space-between;
   display: flex;
