--- a/src/styles/components/bloglist.module.scss
+++ b/src/styles/components/bloglist.module.scss
@@ -1,6 +1,10 @@
 .list {
+  list-style: none;
+  margin: 0;
   li {
-    margin-bottom: 2rem;
+    padding: 1.5rem 1.5rem 1.5rem 1.5rem;
+    border-bottom: 1px solid #000;
+    margin-bottom: 0;
   }
   h2 {
     margin-bottom: 1rem;
