--- a/src/styles/components/bloglist.module.scss
+++ b/src/styles/components/bloglist.module.scss
@@ -1,8 +1,6 @@
 .list {
-  list-style: none;
-  margin: 0;
   li {
-    padding: 1.5rem 1.5rem 1.5rem 1.5rem;
+    padding: 1.5rem;
     border-bottom: 1px solid #000;
     margin-bottom: 0;
   }
