--- a/src/styles/components/layout.module.scss
+++ b/src/styles/components/layout.module.scss
@@ -2,6 +2,9 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  &.info_page {
+    color: #fff;
+  }
 }
 
 .content {
@@ -14,6 +17,4 @@
   .layout {
     flex-direction: row;
   }
-  
- 
 }
