--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,14 +7,15 @@ body {
 a {
   text-decoration: none;
   color: inherit;
-  -webkit-transition: color .15s ease;
-  transition: color .15s ease;
 }
 
 a:hover {
-  color: #59d4af;
-  -webkit-transition: color .15s ease;
-  transition: color .15s ease;
+  text-decoration: line-through;
+  text-decoration-color: inherit;
+}
+ul {
+  list-style: none;
+  margin: 0;
 }
 
 //TYPOGRAPHY-------------------------------------
@@ -22,6 +23,7 @@ a:hover {
 h1, h2 {
   font-weight: normal;
   font-size: 1.5rem;
+  line-height: 1.3;
 }
 
 p {
