--- a/src/styles/components/header.module.scss
+++ b/src/styles/components/header.module.scss
@@ -11,7 +11,7 @@
 
 .nav {
   padding: 1.5rem;
-  border-bottom: 1px solid #000;
+  border-bottom: 2px solid #000;
   display: flex;
   justify-content: space-between;
   display: flex;
@@ -42,7 +42,7 @@
   .nav {
     width: 40vw;
     height: 100%;
-    border-right: 1px solid #f1f3f5;
+    border-right: 2px solid #000;
     border-bottom: none;
     display: flex;
     justify-content: space-between;
