--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -21,7 +21,7 @@ ul {
 //TYPOGRAPHY-------------------------------------
 
 h1, h2 {
-  font-weight: normal;
+  font-weight: 500;
   font-size: 1.5rem;
   line-height: 1.3;
 }
