--- a/src/styles/components/bloglist.module.scss
+++ b/src/styles/components/bloglist.module.scss
@@ -1,8 +1,10 @@
 .list {
-  li {
+  li{
     padding: 1.5rem;
-    border-bottom: 2px solid #000;
     margin-bottom: 0;
+  }
+  li:not(:last-child) {
+    border-bottom: 2px solid #000;
   }
   h2 {
     margin-bottom: 1rem;
