--- a/src/styles/components/bloglist.module.scss
+++ b/src/styles/components/bloglist.module.scss
@@ -2,11 +2,12 @@
   li{
     padding: 1.5rem;
     margin-bottom: 0;
-  }
-  li:not(:last-child) {
     border-bottom: 2px solid #000;
   }
   h2 {
     margin-bottom: 1rem;
+  }
+  p {
+    max-width: 900px;
   }
 }
