--- a/src/styles/components/header.module.scss
+++ b/src/styles/components/header.module.scss
@@ -11,7 +11,7 @@
 
 .nav {
   padding: 1.5rem;
-  border-bottom: 2px solid #000;
+  border-bottom: 1px solid #EBEBEB;
   display: flex;
   justify-content: space-between;
   flex-direction: row;
@@ -33,7 +33,7 @@
     padding: 2rem;
     width: 35vw;
     height: 100%;
-    border-right: 2px solid #000;
+    border-right: 1px solid #EBEBEB;
     border-bottom: none;
     flex-direction: column;
     align-items: flex-start;
