--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Work+Sans&display=swap');
+
 body {
-  font-family: "Helvetica Neue", Helvetica, sans-serif;
+  font-family: "Work Sans","Helvetica Neue", Helvetica, sans-serif;
   overflow-x: hidden;
   color: #000;
+  font-size: 16px;
 }
 
 a {
@@ -20,12 +23,52 @@ ul {
 
 //TYPOGRAPHY-------------------------------------
 
+h1, h2, h3, h4, h5, h6, p {
+  font-family: "Work Sans","Helvetica Neue", Helvetica, sans-serif;
+}
+
 h1, h2 {
   font-weight: 500;
+}
+
+h1 {
+  font-size: 2rem;
+  letter-spacing: -1px;
+  line-height: 1.1875;
+}
+
+h2 {
   font-size: 1.5rem;
-  line-height: 1.3;
+  letter-spacing: -.75px;
+  line-height: 1.1667;
+}
+
+h3 {
+  font-size: 1rem;
+  letter-spacing: -.5px;
+  line-height: 1.1875;
+  color: #A0A0A0;
+  font-weight: normal;
 }
 
 p {
-  font-size: 1.075rem;
+  font-size: 1rem;
+  letter-spacing: -.5px;
+  line-height: 1.4375;
+  color: #464646;
+}
+
+@media (min-width: 1280px) {
+  // h1 {
+  //   font-size: 2rem;
+  //   line-height: 1.3;
+  // }
+
+  // h2 {
+  //   font-size: 1.5rem;
+  // }
+  
+  // p {
+  //   font-size: 1.075rem;
+  // }
 }
