mobile home & blog layout styles

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,10 +10,12 @@ body {
 a {
   text-decoration: none;
   color: inherit;
+  transition: opacity .2s ease;
 }
 
 a:hover {
-  text-decoration: line-through;
+  transition: opacity .2s ease;
+  opacity: .5;
   text-decoration-color: inherit;
 }
 ul {
@@ -38,13 +40,13 @@ h1 {
 }
 
 h2 {
-  font-size: 1.5rem;
+  font-size: 2rem;
   letter-spacing: -.75px;
-  line-height: 1.1667;
+  line-height: 1.2;
 }
 
 h3 {
-  font-size: 1rem;
+  font-size: 1.2rem;
   letter-spacing: -.5px;
   line-height: 1.1875;
   color: #A0A0A0;
@@ -52,23 +54,35 @@ h3 {
 }
 
 p {
-  font-size: 1rem;
+  font-size: 1.2rem;
   letter-spacing: -.5px;
-  line-height: 1.4375;
+  line-height: 1.5;
   color: #464646;
 }
 
 @media (min-width: 1280px) {
-  // h1 {
-  //   font-size: 2rem;
-  //   line-height: 1.3;
-  // }
 
-  // h2 {
-  //   font-size: 1.5rem;
-  // }
+  h1 {
+    font-size: 2rem;
+    letter-spacing: -1px;
+    line-height: 1.1875;
+  }
   
-  // p {
-  //   font-size: 1.075rem;
-  // }
+  h2 {
+    font-size: 1.5rem;
+    letter-spacing: -.75px;
+    line-height: 1.1667;
+  }
+  
+  h3 {
+    font-size: 1rem;
+    letter-spacing: -.5px;
+    line-height: 1.1875;
+    color: #A0A0A0;
+    font-weight: normal;
+  }
+
+  p {
+    line-height: 1.4375;
+  }
 }
