--- a/src/styles/components/bloglist.module.scss
+++ b/src/styles/components/bloglist.module.scss
@@ -1,7 +1,7 @@
 .list {
   .hero_image {
     width: 100%;
-    height: 100%;
+    height: 33vh;
     overflow: hidden;
     img {
       object-fit: cover;
@@ -12,10 +12,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 1.5rem;
+    padding: 1.5rem 1.25rem;
   }
-  
+ 
   li{
+    opacity: inherit;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -39,7 +40,6 @@
     li {
       min-height: 250px;
       height: 33.333vh;
-      // padding: 2rem;
       flex-direction: row;
     }
     .hero_image {
@@ -52,6 +52,18 @@
     }
     .blog__info {
       min-width: 70%;
+      
+    }
+  }
+}
+
+@media(min-width: 1280px) {
+  .list {
+    .blog__info {
+      padding: 3rem;
+    }
+    h3 {
+      margin-bottom: 1.2rem;
     }
   }
 }
