--- a/src/styles/components/header.module.scss
+++ b/src/styles/components/header.module.scss
@@ -10,7 +10,7 @@
 }
 
 .nav {
-  padding: 1.5rem;
+  padding: 1.5rem 1.25rem;
   border-bottom: 1px solid #EBEBEB;
   display: flex;
   justify-content: space-between;
