--- a/src/styles/templates/blog.module.scss
+++ b/src/styles/templates/blog.module.scss
@@ -1,27 +1,31 @@
 .blog {
-  padding: 2.5rem 1.5rem;
   h1 {
     margin-bottom: .7rem;
-  }
-  p {
-    font-size: 1.125rem;
-    line-height: 1.4;
   }
 }
 
 .blog__hero {
-  width: 70%;
-  margin: 1rem auto 2rem auto;
+  width: 100%;
+  margin: 0;
   img {
     margin-bottom: 0;
+    object-fit: cover;
   }
 }
 
 .blog__info {
-  width: 80%;
+  padding: 1.5rem 1.25rem;
+  width: 100%;
+  h2 {
+    margin-bottom: .66rem;
+  }
+  h3 {
+    margin-bottom: 0;
+  }
 }
 
 .blog__body {
+  padding: 0 1.25rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
