--- a/src/styles/components/info.module.scss
+++ b/src/styles/components/info.module.scss
@@ -1,7 +1,16 @@
 .info_blurb {
-  max-width: 900px;
-  padding: 1.5rem;
-  h2 {
-    margin-bottom: 0;
+  max-width: 800px;
+  padding: 1.5rem 1.25rem;
+}
+
+@media (min-width: 768px) {
+  .info_blurb {
+    padding: 2rem;
+  }
+}
+
+@media(min-width: 1440px) {
+  .info_blurb {
+    padding: 3rem;
   }
 }
