--- a/src/styles/components/bloglist.module.scss
+++ b/src/styles/components/bloglist.module.scss
@@ -1,11 +1,32 @@
 .list {
+  a:hover {
+    opacity: 1;
+    li {
+      div.hero_image {
+        img {
+          opacity: .8;
+          transition: opacity .3s ease; 
+        }
+      }
+      div.blog__info {
+        h2, h3, p {
+          transform: translateX(10px) ;
+          transition: transform .5s ease-out;
+        }
+        
+      }
+    }
+  }
   .hero_image {
     width: 100%;
     height: 33vh;
     overflow: hidden;
+    background-color: #000;
     img {
       object-fit: cover;
       object-position: 50% 50%;
+      opacity: 1;
+      transition: opacity .3s ease; 
     }
   }
   .blog__info {
@@ -13,6 +34,13 @@
     flex-direction: column;
     justify-content: center;
     padding: 1.5rem 1.25rem;
+    transform: translateX(0px) ;
+    transition: transform .3s ease-in;
+    border-bottom: 1px solid #EBEBEB;
+    h2, h3, p {
+      transform: translateX(0px) ;
+      transition: transform .5s ease-out;
+    }
   }
  
   li{
@@ -22,7 +50,6 @@
     flex-direction: column;
     min-height: 38vh;
     margin-bottom: 0;
-    border-bottom: 1px solid #EBEBEB;
   }
   h2 {
     margin-bottom: .5rem;
