--- a/src/styles/templates/blog.module.scss
+++ b/src/styles/templates/blog.module.scss
@@ -33,12 +33,11 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  span{
-    width: 70%;
-    margin: 2rem auto;
-  }
   a {
     padding-bottom: 1.5rem;
+  }
+  p:last-child {
+    margin-bottom: 0;
   }
 }
 
