--- a/src/styles/components/bloglist.module.scss
+++ b/src/styles/components/bloglist.module.scss
@@ -20,6 +20,7 @@
       object-position: 50% 50%;
       opacity: 1;
       transition: opacity 0.3s ease;
+      min-height: 100%;
     }
   }
   .blog__info {
@@ -92,6 +93,7 @@
         min-width: 100%;
         height: 100%;
         width: auto;
+        min-height: 0;
       }
     }
     .blog__info {
