got gatsby images working on blogList

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -60,6 +60,11 @@ p {
   color: #464646;
 }
 
+.gatsby-image-wrapper {
+  width: 100%;
+  min-height: 100%;
+}
+
 @media (min-width: 1280px) {
 
   h1 {
