--- a/src/styles/components/bloglist.module.scss
+++ b/src/styles/components/bloglist.module.scss
@@ -15,6 +15,10 @@
     height: 33vh;
     overflow: hidden;
     background-color: #000;
+    .gatsby-image-wrapper {
+      width: 100%;
+      min-height: 100%;
+    }
     img {
       object-fit: cover;
       object-position: 50% 50%;
