added gatsby-image to blog hero

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -60,6 +60,7 @@ p {
   color: #464646;
 }
 
+//global for gatsby-image plugin container
 .gatsby-image-wrapper {
   width: 100%;
   min-height: 100%;
