--- a/src/styles/components/layout.module.scss
+++ b/src/styles/components/layout.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  // width: 100vw;
   &.info_page {
     color: #EBEBEB;
   }
@@ -17,7 +18,7 @@
   }
   .content {
     flex-grow: none;
-    width: 70vw;
-    margin-left: 30vw;
+    width: 70%;
+    margin-left: 30%;
   }
 }
