--- a/src/styles/components/bloglist.module.scss
+++ b/src/styles/components/bloglist.module.scss
@@ -2,7 +2,7 @@
   a:hover {
     opacity: 1;
     li {
-      div.hero_image {
+      div.list__hero {
         img {
           opacity: 0.8;
           transition: opacity 0.3s ease;
@@ -10,7 +10,7 @@
       }
     }
   }
-  .hero_image {
+  .list__hero {
     width: 100%;
     height: 33vh;
     overflow: hidden;
@@ -23,7 +23,7 @@
       min-height: 100%;
     }
   }
-  .blog__info {
+  .list__info {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -63,14 +63,14 @@
     a:hover {
       opacity: 1;
       li {
-        div.hero_image {
+        div.list__hero {
           img {
             opacity: 0.8;
             -webkit-transition: opacity 0.3 ease;
             transition: opacity 0.3s ease;
           }
         }
-        div.blog__info {
+        div.list__info {
           h2,
           h3,
           p {
@@ -87,7 +87,7 @@
       height: 33.333vh;
       flex-direction: row;
     }
-    .hero_image {
+    .list__hero {
       height: 100%;
       img {
         min-width: 100%;
@@ -96,7 +96,7 @@
         min-height: 0;
       }
     }
-    .blog__info {
+    .list__info {
       min-width: 70%;
     }
   }
@@ -104,7 +104,7 @@
 
 @media (min-width: 1280px) {
   .list {
-    .blog__info {
+    .list__info {
       padding: 3rem;
     }
     h3 {
