adjusting img padding

--- a/src/styles/templates/blog.module.scss
+++ b/src/styles/templates/blog.module.scss
@@ -47,7 +47,7 @@
     line-height: 1.2;
   }
   p {
-    color: inherit;
+    color: #464646;
     font-weight: normal;
   }
   ul {
@@ -91,7 +91,7 @@
     padding: 0 2rem;
     span {
       width: 100%;
-      margin: 1.5rem auto;
+      margin: 1rem auto;
     }
     ul, ol {
       margin-left: 1.5rem;
