adjusting header style <768

--- a/src/styles/templates/blog.module.scss
+++ b/src/styles/templates/blog.module.scss
@@ -43,7 +43,7 @@
   }
   h1, h2, h3, h4, h5, h6 {
     font-weight: normal;
-    padding: 1.5rem;
+    padding: 1.5rem 1rem;
     line-height: 1.2;
   }
   p {
@@ -89,6 +89,9 @@
   .blog__body {
     max-width: 800px;
     padding: 0 2rem;
+    h1, h2, h3, h4, h5, h6 {
+      padding: 1.5rem;
+    }
     span {
       width: 100%;
       margin: 1rem auto;
